手刻導覽列漢堡排選單

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <!-- 建立 Main Header -->
   <header>
     <a href="#" class="navbar-brand">毛小孩星球</a>
+
+    <!-- 漢堡排選單: input checkbox -->
+    <input type="checkbox" class="navbar-toggle" id="navbar-toggle">
+
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-item"><a href="#activity" class="nav-link">近期活動</a></li>
@@ -20,8 +24,10 @@
       </ul>
     </nav>
 
-
-
+    <!-- 利用 label 連動 input checkbox -->
+    <label for="navbar-toggle" class="navbar-toggle-label">
+      <span class="hamburger"></span>
+    </label>
   </header>
 
 
