--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
     </label>
   </header>
 
+  <!-- 建立活動區 banner -->
+  <section id="activity" class="activity">
+    <div class="container">
+      <div class="banner-wrapper">
+        <div class="main-banner background-image">
+          <h1 class="banner-title">帶毛小孩回家吧</h1>
+          <p class="banner-description">Bring them back</p>
+          <a href="#adoption" class="action">領養去</a>
+        </div>
+
+        <div class="sub-banner sub-banner-left background-image">
+          <h1 class="banner-title">捐款送玩偶</h1>
+          <p class="banner-description">NTD$100</p>
+          <a href="#adoption" class="action">捐款</a>
+        </div>
+
+        <div class="sub-banner sub-banner-right background-image">
+          <h1 class="banner-title">捐款送狗骨頭</h1>
+          <p class="banner-description">NTD$300</p>
+          <a href="#adoption" class="action">捐款</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 </html>
