--- a/index.html
+++ b/index.html
@@ -171,6 +171,19 @@
     </div>
   </section>
 
+  <!-- 建立領養資訊 adoption -->
+  <section id="adoption">
+    <div class="container">
+      <div class="adoption-wrapper">
+        <img src="https://images.unsplash.com/photo-1522276498395-f4f68f7f8454?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=749&q=80" alt="" class="adoption-image">
+        <div class="adoption-info">
+          <h3 class="adoption-title">領養毛小孩</h3>
+          <p class="adoption-description">用領養代替購買，帶毛小孩回家一起收活吧</p>
+          <a href="javascript:void(0)" class="action">領養去</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
